--- a/Public/Css/index_main.css
+++ b/Public/Css/index_main.css
@@ -924,7 +924,7 @@ h2:before {
   position: absolute;
   left: -21px;
   top:  5px;
-  background-color: #4fc1e9;
+  background-color: #efefef;
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -1071,7 +1071,7 @@ a {
   text-decoration:none;
 }
 .bckg {
-  background-color:#4fc1e9;
+  background-color:#4795d1;
   box-shadow:5px 2px 10px rgba(14, 14, 14, 0.48) inset;
   width:200px;
   height:100%;
@@ -1087,7 +1087,7 @@ h1 {
     margin:0;
     font-size:25px;
     letter-spacing:2px;
-    background-color:#4fc1e9;
+    background-color:#efefef;
     border-bottom:1px solid rgba(101, 116, 134, 0.57);
 }
 h2 {
@@ -1112,7 +1112,7 @@ h2 {
     position: absolute;
     left: -19px;
     top: 12px;
-    background-color:#4fc1e9;
+    background-color:#4795d1;
     -webkit-transform:rotate(45deg);
     -moz-transform:rotate(45deg);
     transform:rotate(45deg);
