--- a/Public/Css/table.css
+++ b/Public/Css/table.css
@@ -1,12 +1,12 @@
-﻿span{
+
+span{
 font-size:14px;
 }
-#mytable,#xxtable{ 
-width: 100%; 
+#mytable { 
+width: 1120px; 
 padding: 0; 
 margin: 0; 
 text-align : center ; 
-background-color:#000000;
 } 
 .table-heading{ 
     font-family : Georgia, serif; 
@@ -20,7 +20,15 @@ background-color:#000000;
 th{
 	font-size:15px; 
 }
-
+td { 
+border-right: 1px solid #C1DAD7; 
+border-bottom: 1px solid #C1DAD7; 
+font-size:13px; 
+padding: 6px 6px 6px 12px; 
+color: #4f6b72; 
+align-content: center;
+width:160px;
+} 
 
 	
 p td_have{
@@ -30,14 +38,8 @@ p td_null{
 	pointer-events: none;
 }
 
-.class_open_xx{
-	color: #60c5eb;
-	}
-.class_open_kc{
-	color: #76c24f;
-	}
-.class_open_ks{
-	color: #f04037;
+.class_open{
+	color: #000000;
 	}
 .class_close{
 	color: #4f6b72;
@@ -48,3 +50,5 @@ p td_null{
 
 .hidden{ 
 display : none ;} 
+
+
