--- a/Public/Css/stickup.css
+++ b/Public/Css/stickup.css
@@ -83,7 +83,7 @@ body {
 .carousel .item {
   display:block;
   min-height: 460px;
-  background-color: #376A8F;
+  background-color: #0a64a4;
 }
 .carousel-caption img{
 	position:relative;
