--- a/Public/Css/bootstrap.css
+++ b/Public/Css/bootstrap.css
@@ -2354,7 +2354,7 @@ input[type="range"] {
   width: 100%;
 }
 select {
-	width: 512px;
+	width: auto;
 }
 select[multiple],
 select[size] {
@@ -2844,8 +2844,26 @@ fieldset[disabled] .btn-default.active {
   margin-bottom:10px ;
   margin-right: 10px;
   color: #fff;
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #f04037;
+  border-color:#285e8e;
+}
+.btn-primary_1 {
+  height:35px;
+  margin-top:10px ;
+  margin-bottom:10px ;
+  margin-right: 10px;
+  color: #fff;
+  background-color: #4795d1;
+  border-color: #285e8e;
+}
+.btn-primary_2 {
+  height:35px;
+  margin-top:10px ;
+  margin-bottom:10px ;
+  margin-right: 10px;
+  color: #fff;
+  background-color: #0a64a4;
+  border-color: #285e8e;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -2853,12 +2871,37 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #3071a9;
+  background-color: #e8c320;
+  border-color: #285e8e;
+  color:#000000;
+}
+.btn-primary_1:hover,
+.btn-primary_1:focus,
+.btn-primary_1:active,
+.btn-primary_1.active,
+.open > .dropdown-toggle.btn-primary {
+  color: #fff;
+  background-color: #76c24f;
+  border-color: #285e8e;
+  color:#000000;
+}
+.btn-primary_2:hover,
+.btn-primary_2:focus,
+.btn-primary_2:active,
+.btn-primary_2.active,
+.open > .dropdown-toggle.btn-primary {
+  color: #fff;
+  background-color: #4795d1;
   border-color: #285e8e;
 }
 .btn-primary:active,
 .btn-primary.active,
-.open > .dropdown-toggle.btn-primary {
+.btn-primary_1:active,
+.btn-primary_1.active,
+.btn-primary_2:active,
+.btn-primary_2.active,
+.open > .dropdown-toggle.btn-primary,
+.open > .dropdown-toggle.btn-primary_2 {
   background-image: none;
 }
 .btn-primary.disabled,
@@ -2879,7 +2922,8 @@ fieldset[disabled] .btn-primary.active {
   background-color: #428bca;
   border-color: #357ebd;
 }
-.btn-primary .badge {
+.btn-primary .badge ,
+.btn-primary_1 .badge {
   color: #428bca;
   background-color: #fff;
 }
@@ -3083,7 +3127,7 @@ fieldset[disabled] .btn-link:focus {
 .btn-lg,
 .btn-group-lg > .btn {
   padding: 5px 16px;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.33;
   border-radius: 6px;
 }
