--- a/Public/Css/main_table.css
+++ b/Public/Css/main_table.css
@@ -1,13 +1,45 @@
-﻿span{
-font-size:14px;
+﻿th{
+	font-size: 16px
+}
+span{
+	font-size: 14px;
+	font: "微软雅黑";
 }
 #mytable,#xxtable{ 
 width: 100%; 
 padding: 0; 
 margin: 0; 
 text-align : center ; 
-background-color:#000000;
+background-color:#ffffff;
 } 
+
+td { 
+border-right: 1px solid #C1DAD7; 
+border-bottom: 1px solid #C1DAD7; 
+font-size:13px; 
+color: #4f6b72; 
+align-content: center;
+width:160px;
+} 
+#detailImg-pre {
+	left: 0;
+	background-position: -35px 0;
+}
+#detailImg-next {
+	right: 0;
+	background-position: -99px 0;
+}
+#detailImg-pre:hover {
+	background-position: -35px -47px;
+}
+#detailImg-next:hover {
+	background-position: -99px -47px;
+}
+.detailImg {
+	text-align: center;
+	position: relative;
+	display: -moz-box;display: -webkit-box;
+}
 .table-heading{ 
     font-family : Georgia, serif; 
     font-size : 16px ; 
@@ -16,25 +48,62 @@ background-color:#000000;
     color : #101010 ; 
 } 
 
-
-th{
-	font-size:15px; 
+.detailImg img {
+	max-width: 684px;
 }
-
-
-	
-p td_have{
+.detailImg p {
+	text-align: center;
+	color: #999;
+}
+#detailImg-pre,
+#detailImg-next {
+	position: absolute;
+	width: 30px;
+	height: 46px;
+	top: 30%;
+	background: url(__IMG__/page_button.gif) 0 0 no-repeat;
 	cursor: pointer;
-	}
-p td_null{
-	pointer-events: none;
+	text-indent:-9999px;
 }
 
+#detailImg-box{
+    -moz-box-flex: 1;-webkit-box-flex: 1;margin-left:30px;margin-right:30px
+}
+#detailImg-box,#detailImg-pre,#detailImg-next,detailImg{
+    -moz-box-sizing: border-box;-webkit-box-sizing: border-box;
+}
+
+.week_id_num_span{
+	text-align: center;
+    width: 30px;
+    height:30px;
+    line-height:35px;
+    padding: 1px 1px 1px 3px;
+    border: 1px solid transparent;
+    border-radius: 1px;
+    -moz-border-radius: 1px;
+    -webkit-border-radius: 1px;
+    color: #000000;
+	background-color:#F7FBFF ;
+	float: left;
+    margin: 1px 1px;
+    font-size: 16px;
+}
+.week_id_num_span:hover{
+    color: #FFFFFF;
+	background-color:#3bafda ;
+	cursor: pointer;
+}
+.week_id_num_span_active{
+    color: #FFFFFF;
+	background-color:#0a64a4 ;
+	cursor: pointer;
+}
 .class_open_xx{
 	color: #60c5eb;
 	}
 .class_open_kc{
-	color: #76c24f;
+	color: #4795d1;
 	}
 .class_open_ks{
 	color: #f04037;
@@ -45,6 +114,3 @@ p td_null{
 .class_null{
 	color: #FFFFFF;
 	}
-
-.hidden{ 
-display : none ;} 
