--- a/Public/Css/bootstrap.css
+++ b/Public/Css/bootstrap.css
@@ -1107,7 +1107,7 @@ h6,
   font-size: 12px;
 }
 p {
-  margin: 2 0 0px;
+  margin: 0 0 10px;
 }
 .lead {
   margin-bottom: 20px;
@@ -3956,7 +3956,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-brand {
   float: left;
   height: 50px;
-  padding: 15px 15px;
+  padding-left:5px;
+  padding-top:6px;
   font-size: 18px;
   line-height: 20px;
 }
@@ -3967,7 +3968,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 @media (min-width: 768px) {
   .navbar > .container .navbar-brand,
   .navbar > .container-fluid .navbar-brand {
-    margin-left: -15px;
   }
 }
 .navbar-toggle {
@@ -5672,6 +5672,7 @@ button.close {
 .popover {
   position: absolute;
   top: 0;
+  max-height:270px;
   left: 0;
   z-index: 1060;
   display: none;
