--- a/Public/Css/stickup.css
+++ b/Public/Css/stickup.css
@@ -42,8 +42,8 @@ body {
 }
 
 .navbar.navbar-inverse.navbar-static-top {
-  background: #5cb85c;
-  border-color: #398439;
+  background: #3399CC;
+  border-color: #339999;
 }
 .navbar.navbar-inverse.navbar-static-top a{
   color:#fff;
