--- a/Public/Css/bootstrap.css
+++ b/Public/Css/bootstrap.css
@@ -5,6 +5,7 @@
  */
 
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
+html { overflow-y: scroll; }
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -1107,7 +1108,7 @@ h6,
   font-size: 12px;
 }
 p {
-  margin: 0 0 10px;
+  margin: 2 0 0px;
 }
 .lead {
   margin-bottom: 20px;
@@ -3956,8 +3957,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-brand {
   float: left;
   height: 50px;
-  padding-left:5px;
-  padding-top:6px;
+  padding: 15px 15px;
   font-size: 18px;
   line-height: 20px;
 }
@@ -3968,6 +3968,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 @media (min-width: 768px) {
   .navbar > .container .navbar-brand,
   .navbar > .container-fluid .navbar-brand {
+    margin-left: -15px;
   }
 }
 .navbar-toggle {
@@ -5672,7 +5673,6 @@ button.close {
 .popover {
   position: absolute;
   top: 0;
-  max-height:270px;
   left: 0;
   z-index: 1060;
   display: none;
